# DeathNoteFakeAPI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_websocket.py
DeathNote_UI/: DeathNote.css  DeathNote.html  DeathNote.js  Dockerfile
app/: main.py
app/core/: config.py
app/crud/: persona.py
app/database/: connection.py
app/models/: models.py
app/routers/: persona.py
app/schemas/: persona.py
app/services/: death_note.py  notification.py  storage.py
tests/: conftest.py  test_crud_persona.py  test_death_note_service.py  test_notification_service.py  test_persona_crud.py  test_storage_service.py
